@@ -1,3 +1,15 @@
+2021-08-03  Devin Rousso  <drousso@apple.com>
+
+        [Live Text] [iOS] Provide a presenting `UIViewController` for machine readable code actions so that they are related to the same view
+        https://bugs.webkit.org/show_bug.cgi?id=228722
+
+        Reviewed by Tim Horton.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView _updateContextMenuForMachineReadableCodeForImageAnalysis:]): Added.
+        (-[WKContentView imageAnalysisGestureDidBegin:]):
+        (-[WKContentView imageAnalysisGestureDidTimeOut:]):
+
 2021-08-02  Peng Liu  <peng.liu6@apple.com>
 
         [GPUP] RemoteAudioSession::setPreferredBufferSize() does not change its preferredBufferSize
