@@ -1,3 +1,12 @@
+2021-08-03  Devin Rousso  <drousso@apple.com>
+
+        [Live Text] [iOS] Provide a presenting `UIViewController` for machine readable code actions so that they are related to the same view
+        https://bugs.webkit.org/show_bug.cgi?id=228722
+
+        Reviewed by Tim Horton.
+
+        * pal/spi/cocoa/VisionKitCoreSPI.h:
+
 2021-08-02  Devin Rousso  <drousso@apple.com>
 
         [Live Text] SPI for machine readable codes is only available on iOS
